refactor: init docgen (#9)